--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,9 @@ title: Swords under the Sun | Playtest materials
 
 theme: minima
 skin: dark
+
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
